force-app/main/default/objects/Review__c/fields/Dislikes__c.field-meta.xml
<CustomField>
    <fullName>Dislikes__c</fullName>
    <label>Dislikes</label>
    <summaryFilterItems>
        <field>Review_Rating__c.Agreed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Review_Rating__c.Review__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>