force-app/main/default/objects/Review__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only Reviewer or Admin can create Reviews.</errorMessage>
        <filterItems>
            <field>User__c.Role__c</field>
            <operation>equals</operation>
            <value>Reviewer</value>
        </filterItems>
        <filterItems>
            <field>User__c.Role__c</field>
            <operation>equals</operation>
            <value>Admin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>